--- a/데이터마이닝_팀프로젝트.ipynb
+++ b/데이터마이닝_팀프로젝트.ipynb
@@ -5117,7 +5117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset2 = pd.read_csv('C:\\\\Users\\\\tlswo\\OneDrive\\\\바탕 화면\\\\18-21데이터통합.csv',encoding='cp949')"
+    "dataset2 = pd.read_csv('C:\\\\Users\\\\tlswo\\OneDrive\\\\바탕 화면\\\\18-21데이터통합_2.csv',encoding='cp949')"
    ]
   },
   {
